fix header element alignment

--- a/src/website/css/main.css
+++ b/src/website/css/main.css
@@ -106,18 +106,14 @@ a:hover, a:focus {
     grid-area: header;
     display: flex;
     flex-direction: row;
-    vertical-align: middle;
+    justify-content: space-between;
+    align-items: center;
     padding: 0 1rem;
     background-color: #f4f6f7;
     border-bottom: 1px solid #888;
 }
 
 .header .logo {
-    flex: 1;
-    order: 1;
-    justify-content: flex-end;
-    align-items: flex-end;
-    float: right;
 }
 
 .header .logo img {
@@ -125,7 +121,6 @@ a:hover, a:focus {
 }
 
 .header .learn-more-btn {
-    align-items: flex-start;
 }
 
 .title {
@@ -144,6 +139,7 @@ a:hover, a:focus {
     font-size: 0.7rem;
     font-weight: normal;
     font-style: normal;
+    margin: 0;
     color: #444;
 }
 
